--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plugin-macro-loader",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "description": "Loader for Latte PluginMacro extension",
   "license": "MIT",
   "keywords": [
@@ -18,7 +18,9 @@
     "build": "rm -rf lib && ./node_modules/.bin/babel src --out-dir lib",
     "prepublish": "npm run build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": ">=4.0.0"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
