--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plugin-macro-loader",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "description": "Loader for Latte PluginMacro extension",
   "license": "MIT",
   "keywords": [
@@ -19,7 +19,8 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "lodash": ">=4.0.0"
+    "lodash": ">=4.0.0",
+    "redbox-react": "^1.2.6"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
